--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=key
+CLERK_SECRET_KEY=key
+
+UPSTASH_REDIS_REST_URL=url
+UPSTASH_REDIS_REST_TOKEN=token
